SUH-Project-Utility 내부 RAG 기반 챗봇 도우미 기능 개발 필요 : fix : 취약점 의존성 수정, 프로젝트 DTO 네이밍 형식 준수하게 수정, login페이지 인라인 스타일 수정, common.css 제거, 로그인 환영 메시지 커서 깜빡임 2초간격으로 수정 https://github.com/Cassiiopeia/suh-project-utility/issues/107